# i-wanna-be-the-dino

./: CMakeLists.txt  LICENSE  README.md  common.h  defs.h  dino.c  dino.h  game.c  game.h  init.c  init.h  iwbtd.c  iwbtd.h  iwbtd.rc  sprites.c  sprites.h  structs.h
resources/images/: title_bg.psd
